feat: upgrade spock